--- a/example.html
+++ b/example.html
@@ -11,7 +11,7 @@
 </script>
 <style>
     html { font-size:100px; }
-    // 一个540px设计稿量到的元素大小
+    /* 一个540px设计稿量到的元素大小*/
     .slide { width:5rem; height:3rem; }
 </style>
 </head>
