整理目录结构

--- a/example/example.html
+++ b/example/example.html
@@ -5,7 +5,7 @@
 <title>viewportREM 示例</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="example.css">
-<script src="viewportREM.js"></script>
+<script src="../viewportREM.js"></script>
 <script>
   // 初始化页面的响应式处理
     viewportREM()
